<resources>
    <string name="app_name">CoupleTones</string>
    <string name="google_login">Login with Google</string>
    <string name="pier_sans">fonts/pier-regular.otf</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main">CoupleTones</string>
    <string name="settings">Settings</string>
    <string name="favorite_locations">Faves</string>
    <string name="partner_locations">Home</string>
    <string name="faves_title">Your Locations</string>
    <string name="home_title">CoupleTones</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="name_header">Name:</string>
    <string name="your_name">Your Name</string>
    <string name="google_account_header">Google Account:</string>
    <string name="your_email">Your Email</string>
    <string name="partner_profile">PARTNER\'S PROFILE</string>
    <string name="partner_name">Partner Name</string>
    <string name="partner_email">Partner Email</string>
    <string name="null_partner_name">No Partner</string>
    <string name="logout">Log Out</string>
    <string name="disconnect">Disconnect with Partner</string>
    <string name="location_name">Location Name</string>
    <string name="location_address">Address</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="departure_time">Departure Time</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_location">Delete Location</string>
    <string name="title_activity_edit_location">EditLocationActivity</string>
    <string name="title_activity_add_partner">AddPartnerActivity</string>
    <string name="connect_message">Connect with your partner.</string>
    <string name="connection">Connect</string>
    <string name="skip">Skip this Step</string>
    <string name="email_address">Partner\'s Email Address</string>
    <string name="location_name_box">Name your new favorite location.</string>
    <string name="location_name_accept">Accept</string>
    <string name="title_activity_partner_request">PartnerRequestActivity</string>
    <string name="partner_request">has sent you a partner request.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="partner_visited_text">visited</string>
    <string name="partner_up_text">wants to partner with you!</string>
    <string name="partner_request_header">Partner Request</string>
    <string name="partner_vibetone">Custom Vibetone</string>
    <string name="notif_settings_tite">NOTIFICATION SETTINGS</string>
    <string name="notif_title">Notifications:</string>
    <string name="notif_tone_title">Tones:</string>
    <string name="notif_vibe_title">Vibration:</string>
    <string name="notif_on_off">On/Off</string>
    <string name="set_button_title">Set</string>




</resources>
