<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".controller.tab.favoritelocations.EditLocationActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <!-- Toolbar Settings for Settings Page -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <!-- Edit Location title -->
        <ImageView
            android:src="@drawable/editlocation_title"
            android:layout_marginLeft="?attr/actionBarSize"
            android:layout_marginRight="?attr/actionBarSize"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="-5dp"
            android:layout_gravity="center" />

        <!-- Left side back button -->
        <ImageButton
            android:id="@+id/btn_backarrow"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginEnd="15dp"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/back_arrow"
            style="@style/Widget.AppCompat.ActionButton" />

            </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <include layout="@layout/content_edit_location" />

        <!-- Target Heart icon at Top of Screen -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_icon"
            android:layout_below="@+id/toolbar"
            android:src="@drawable/target_icon"
            android:layout_marginTop="70dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:layout_centerHorizontal="true" />

        <!-- Text Field for Location Name -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/location_name"
            android:ems="12"
            android:id="@+id/location_name"
            android:textColor="@color/subtitleColor"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/location_icon"
            android:layout_centerHorizontal="true" />

        <!-- Text Field for Location Address -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/location_address"
            android:ems="12"
            android:id="@+id/location_address"
            android:textColor="@color/subtitleColor"
            android:layout_below="@+id/location_name"
            android:layout_marginTop="25dp"
            android:layout_alignStart="@+id/location_name" />

        <!-- Save Changes Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:id="@+id/save_changes_button"
            android:minWidth="260dp"
            android:minHeight="40dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/location_address"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_alignStart="@+id/location_address"
            android:layout_alignEnd="@+id/location_address" />

        <!-- Delete Location Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_location"
            android:textAllCaps="false"
            android:id="@+id/delete_location_button"
            android:minWidth="260dp"
            android:minHeight="40dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@color/disconnectColor"
            android:layout_below="@+id/save_changes_button"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/location_address"
            android:layout_alignEnd="@+id/location_address"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
